--- a/FE/src/App.css
+++ b/FE/src/App.css
@@ -51,3 +51,11 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+input {
+  max-width: 400px;
+  width: 100%;
+  padding: 0.5rem;
+  margin: 0 auto;
+  display: block;
+}
